Updated Favorit fonts

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -4,10 +4,10 @@
 		font-style: normal;
 		font-weight: normal;
 		font-display: swap;
-		src: local('ABC Favorit Regular'),
-			url('fonts/favorit/ABCFavorit-Regular.woff')
+		src: local('Favorit Std Regular'),
+			url('fonts/favorit/FavoritStd-Regular.woff')
 				format('woff'),
-			url('fonts/favorit/ABCFavorit-Regular.woff2')
+			url('fonts/favorit/FavoritStd-Regular.woff2')
 				format('woff2');
 	}
 
@@ -16,10 +16,10 @@
 		font-style: italic;
 		font-weight: normal;
 		font-display: swap;
-		src: local('ABC Favorit Regular Italic'),
-			url('fonts/favorit/ABCFavorit-RegularItalic.woff')
+		src: local('Favorit Std Italic'),
+			url('fonts/favorit/FavoritStd-Italic.woff')
 				format('woff'),
-			url('fonts/favorit/ABCFavorit-RegularItalic.woff2')
+			url('fonts/favorit/FavoritStd-Italic.woff2')
 				format('woff2');
 	}
 
@@ -28,9 +28,9 @@
 		font-style: normal;
 		font-weight: bold;
 		font-display: swap;
-		src: local('ABC Favorit Bold'),
-			url('fonts/favorit/ABCFavorit-Bold.woff') format('woff'),
-			url('fonts/favorit/ABCFavorit-Bold.woff2')
+		src: local('Favorit Std Bold'),
+			url('fonts/favorit/FavoritStd-Bold.woff') format('woff'),
+			url('fonts/favorit/FavoritStd-Bold.woff2')
 				format('woff2');
 	}
 
@@ -39,7 +39,7 @@
 		font-style: italic;
 		font-weight: bold;
 		font-display: swap;
-		src: local('ABC Favorit Bold Italic'),
+		src: local('Favorit Std Bold Italic'),
 			url('fonts/favorit/ABCFavorit-BoldItalic.woff')
 				format('woff'),
 			url('fonts/favorit/ABCFavorit-BoldItalic.woff2')
@@ -47,14 +47,14 @@
 	}
 
 	@font-face {
-		font-family: 'Favorit Expanded';
+		font-family: 'Favorit Expanded Bold';
 		font-style: normal;
 		font-weight: bold;
 		font-display: swap;
-		src: local('ABC Favorit Expanded Bold'),
-			url('fonts/favorit/ABCFavoritExpanded-Bold.woff')
+		src: local('Favorit Std Bold Expanded'),
+			url('fonts/favorit/FavoritStd-BoldExpanded.woff')
 				format('woff'),
-			url('fonts/favorit/ABCFavoritExpanded-Bold.woff2')
+			url('fonts/favorit/FavoritStd-BoldExpanded.woff2')
 				format('woff2');
 	}
 
@@ -63,10 +63,10 @@
 		font-style: normal;
 		font-weight: normal;
 		font-display: swap;
-		src: local('ABC Favorit Mono Regular'),
-			url('fonts/favorit/ABCFavoritMono-Regular.woff')
+		src: local('Favorit Mono Std Regular'),
+			url('fonts/favorit/FavoritMonoStd-Regular.woff')
 				format('woff'),
-			url('fonts/favorit/ABCFavoritMono-Regular.woff2')
+			url('fonts/favorit/FavoritMonoStd-Regular.woff2')
 				format('woff2');
 	}
 
@@ -75,10 +75,10 @@
 		font-style: italic;
 		font-weight: normal;
 		font-display: swap;
-		src: local('ABC Favorit Mono Regular Italic'),
-			url('fonts/favorit/ABCFavoritMono-RegularItalic.woff')
+		src: local('Favorit Mono Std Italic'),
+			url('fonts/favorit/FavoritMonoStd-Italic.woff')
 				format('woff'),
-			url('fonts/favorit/ABCFavoritMono-RegularItalic.woff2')
+			url('fonts/favorit/FavoritMonoStd-Italic.woff2')
 				format('woff2');
 	}
 
