--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -47,7 +47,7 @@
 	}
 
 	@font-face {
-		font-family: 'Favorit Expanded Bold';
+		font-family: 'Favorit Expanded';
 		font-style: normal;
 		font-weight: bold;
 		font-display: swap;
