Added Noto Music font and cleaned up src directory

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -5,9 +5,9 @@
 		font-weight: normal;
 		font-display: swap;
 		src: local('Favorit Std Regular'),
-			url('fonts/favorit/FavoritStd-Regular.woff')
+			url('/fonts/favorit/FavoritStd-Regular.woff')
 				format('woff'),
-			url('fonts/favorit/FavoritStd-Regular.woff2')
+			url('/fonts/favorit/FavoritStd-Regular.woff2')
 				format('woff2');
 	}
 
@@ -17,9 +17,9 @@
 		font-weight: normal;
 		font-display: swap;
 		src: local('Favorit Std Italic'),
-			url('fonts/favorit/FavoritStd-Italic.woff')
+			url('/fonts/favorit/FavoritStd-Italic.woff')
 				format('woff'),
-			url('fonts/favorit/FavoritStd-Italic.woff2')
+			url('/fonts/favorit/FavoritStd-Italic.woff2')
 				format('woff2');
 	}
 
@@ -29,8 +29,8 @@
 		font-weight: bold;
 		font-display: swap;
 		src: local('Favorit Std Bold'),
-			url('fonts/favorit/FavoritStd-Bold.woff') format('woff'),
-			url('fonts/favorit/FavoritStd-Bold.woff2')
+			url('/fonts/favorit/FavoritStd-Bold.woff') format('woff'),
+			url('/fonts/favorit/FavoritStd-Bold.woff2')
 				format('woff2');
 	}
 
@@ -40,9 +40,9 @@
 		font-weight: bold;
 		font-display: swap;
 		src: local('Favorit Std Bold Italic'),
-			url('fonts/favorit/ABCFavorit-BoldItalic.woff')
+			url('/fonts/favorit/ABCFavorit-BoldItalic.woff')
 				format('woff'),
-			url('fonts/favorit/ABCFavorit-BoldItalic.woff2')
+			url('/fonts/favorit/ABCFavorit-BoldItalic.woff2')
 				format('woff2');
 	}
 
@@ -52,9 +52,9 @@
 		font-weight: bold;
 		font-display: swap;
 		src: local('Favorit Std Bold Expanded'),
-			url('fonts/favorit/FavoritStd-BoldExpanded.woff')
+			url('/fonts/favorit/FavoritStd-BoldExpanded.woff')
 				format('woff'),
-			url('fonts/favorit/FavoritStd-BoldExpanded.woff2')
+			url('/fonts/favorit/FavoritStd-BoldExpanded.woff2')
 				format('woff2');
 	}
 
@@ -64,9 +64,9 @@
 		font-weight: normal;
 		font-display: swap;
 		src: local('Favorit Mono Std Regular'),
-			url('fonts/favorit/FavoritMonoStd-Regular.woff')
+			url('/fonts/favorit/FavoritMonoStd-Regular.woff')
 				format('woff'),
-			url('fonts/favorit/FavoritMonoStd-Regular.woff2')
+			url('/fonts/favorit/FavoritMonoStd-Regular.woff2')
 				format('woff2');
 	}
 
@@ -76,9 +76,9 @@
 		font-weight: normal;
 		font-display: swap;
 		src: local('Favorit Mono Std Italic'),
-			url('fonts/favorit/FavoritMonoStd-Italic.woff')
+			url('/fonts/favorit/FavoritMonoStd-Italic.woff')
 				format('woff'),
-			url('fonts/favorit/FavoritMonoStd-Italic.woff2')
+			url('/fonts/favorit/FavoritMonoStd-Italic.woff2')
 				format('woff2');
 	}
 
@@ -88,9 +88,9 @@
 		font-weight: normal;
 		font-display: swap;
 		src: local('Tiempos Text Regular'),
-			url('fonts/tiempos-text/TiemposText-Regular.woff')
+			url('/fonts/tiempos-text/TiemposText-Regular.woff')
 				format('woff'),
-			url('fonts/tiempos-text/TiemposText-Regular.woff2')
+			url('/fonts/tiempos-text/TiemposText-Regular.woff2')
 				format('woff2');
 	}
 
@@ -100,9 +100,9 @@
 		font-weight: normal;
 		font-display: swap;
 		src: local('Tiempos Text Regular Italic'),
-			url('fonts/tiempos-text/TiemposText-RegularItalic.woff')
+			url('/fonts/tiempos-text/TiemposText-RegularItalic.woff')
 				format('woff'),
-			url('fonts/tiempos-text/TiemposText-RegularItalic.woff2')
+			url('/fonts/tiempos-text/TiemposText-RegularItalic.woff2')
 				format('woff2');
 	}
 
@@ -112,9 +112,9 @@
 		font-weight: bold;
 		font-display: swap;
 		src: local('Tiempos Text Bold'),
-			url('fonts/tiempos-text/TiemposText-SemiBold.woff')
+			url('/fonts/tiempos-text/TiemposText-SemiBold.woff')
 				format('woff'),
-			url('fonts/tiempos-text/TiemposText-Bold.woff2')
+			url('/fonts/tiempos-text/TiemposText-Bold.woff2')
 				format('woff2');
 	}
 
@@ -124,9 +124,20 @@
 		font-weight: bold;
 		font-display: swap;
 		src: local('Tiempos Text Bold Italic'),
-			url('fonts/tiempos-text/TiemposText-SemiBoldItalic.woff')
+			url('/fonts/tiempos-text/TiemposText-SemiBoldItalic.woff')
 				format('woff'),
-			url('fonts/tiempos-text/TiemposText-BoldItalic.woff2')
+			url('/fonts/tiempos-text/TiemposText-BoldItalic.woff2')
 				format('woff2');
+	}
+
+	@font-face {
+		font-family: 'Noto Music';
+		font-style: normal;
+		font-weight: 300;
+		font-display: swap;
+		src: local('Noto Music'),
+			url('/fonts/noto-music/NotoMusic-Regular.woff') format('woff'),
+			url('/fonts/noto-music/NotoMuisc-Regular.woff2') format('woff2'),
+		;
 	}
 </style>
